Fixes
Co-authored-by: Claude Opus 5 <noreply@anthropic.com>